# AI_legal_assistant

./: .env.sample  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
chroma/: chroma.sqlite3
fastapi_server/: fastapi_legal.py
langgraph_legal_ai/: core_graph.py  legal_agent_wrapper.py
langgraph_legal_ai/chroma/a883d251-010d-48df-aab1-eeb30cb73dda/: index_metadata.pickle
langgraph_legal_ai/data_manager/: doc_download.py  load_chroma.py  target_laws.py
langgraph_legal_ai/db/: checkpoints.sqlite-shm
langgraph_legal_ai/legal_modules/: chain_summariser.py  graph_builder.py  node_helpers.py  prompts.py  setup.py  state.py  test_graph_nodes.py  tools.py  utils.py
langgraph_legal_ai/legal_modules/nodes/: compliance_and_loophole_validator.py  consistency_auditor_and_cite.py  decompose_to_analysis_units.py  finalize_and_summarise_response.py  ingest_document_if_needed.py  parallel_join_gate.py  precedent_matcher.py  retriever.py  risk_and_remediation_assessor.py  synthesize_verdict.py
langgraph_legal_ai/user-docs/: chroma.sqlite3
legal-analyzer/: index.html  package-lock.json  package.json
legal-analyzer/src/: legalAI.tsx  main.tsx  test.tsx
